<resources>
    <string name="app_name">HopIn</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="slogan">so that we all can HopIn with others\nand save time, resources, and money!</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forget_account">Forgot account?</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="aub_mail">Email</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="enter_code">Enter the code shown below:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_confirmation_page">ConfirmationPage</string>
    <string name="confirmation_message">A confirmation email has been sent to you. Please enter the code:</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="upload">Upload</string>
    <string name="upload_schedule">Upload Schedule Link</string>
    <string name="title_activity_contact_information">ContactInformation</string>
    <string name="phone_number">Phone Number</string>
    <string name="fax">Fax/P.O.Box</string>
    <string name="backup_email_address">Backup Email Address</string>
    <string name="title_activity_car">Car</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="number_of_passengers">Number of passengers per car</string>
    <string name="title_activity_profile">Profile</string>
    <string name="status">Status</string>
    <string name="switch_user_type">Switch User Type</string>
    <string name="title_activity_distance_units">Distance Units</string>
    <string name="automatic">Automatic</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="distance_units">Distance Units</string>
    <string name="title_activity_s">Notification</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_navigation_settigns">NavigationSettigns</string>
    <string name="title_activity_map_history">MapHistory</string>
    <string name="title_activity_show_scale_on_map">ShowScaleOnMap</string>
    <string name="title_activity_terms_and_privacy">TermsAndPrivacy</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_send_feedback">SendFeedback</string>
    <string name="title_activity_report_problem">ReportProblem</string>
    <string name="title_activity_left_settings">LeftSettings</string>
    <string name="title_activity_right_settings">RightSettings</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="title_activity_slide_menu">SlideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="Vehicle_Type">
        <item>Ford</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>GMC</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Honda</item>
        <item>Kia</item>
        <item>Mercedes-Benz</item>
        <item>Mazda</item>
    </string-array>

    <string-array name="Colors">
        <item>Black</item>
        <item>White</item>
        <item>Blue</item>
        <item>Silver</item>
        <item>Gold</item>
    </string-array>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_terms_and_conditions">TermsAndConditions</string>
    <string name="title_activity_settings">Settings</string>

</resources>
    
    
